# multi-region-eks-gitops

./: .gitignore  README.md
argocd-apps/: README.md  app-of-apps.yaml  board-app-dr.yaml  board-app-prod.yaml  board-app-staging.yaml
board-app/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
board-app/alembic/: env.py
board-app/alembic/versions/: 0001_initial.py
board-app/app/: config.py  database.py  logging_config.py  main.py  metrics.py  middleware.py
board-app/app/models/: post.py
board-app/app/routers/: ops.py  posts.py  posts_api.py
board-app/app/schemas/: __init__.py  post.py
board-app/app/static/: style.css
board-app/app/templates/: base.html  detail.html  edit.html  list.html  new.html
board-app/docker/: entrypoint.sh
board-app/nginx/: Dockerfile  nginx.conf
board-app/tests/: conftest.py  test_health.py  test_posts.py
docs/: 2026.04.28-EKS-구축-가이드.md  2026.04.29-트러블슈팅-기록.md  AWS-TGW-멀티리전-연결-가이드.md  ArgoCD-GitOps-가이드.md  오사카-Staging-클러스터-구축-보고서.md
infra/: README.md
infra/eksctl/: cluster-c-osaka-staging.yaml
manifests/board-app/base/: Configmap.yaml  Deployment.yaml  Ingress.yaml  SecretProviderClass.yaml  db_init_Job.yaml  kustomization.yaml
manifests/board-app/overlays/dr/: kustomization.yaml
manifests/board-app/overlays/prod/: kustomization.yaml
manifests/board-app/overlays/staging/: README.md  kustomization.yaml
scripts/: verify-osaka-staging.sh
